--- a/doc/styles.css
+++ b/doc/styles.css
@@ -23,6 +23,27 @@ p a:hover {
     text-decoration: none;
 }
 
+pre code {
+    overflow: auto;
+}
+
+#sidebar::-webkit-scrollbar,
+pre code::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+
+#sidebar::-webkit-scrollbar-track,
+pre code::-webkit-scrollbar-track {
+    background: rgba(0,0,0,0.3);
+}
+
+#sidebar::-webkit-scrollbar-thumb,
+pre code::-webkit-scrollbar-thumb {
+    background: rgba(255,2555,255,0.3);
+    border-radius: 5px;
+}
+
 #sidebar {
     background: #272822;
     border-right: 10px solid #272822;
@@ -51,19 +72,6 @@ p a:hover {
     margin-top: 10px;
     font-weight: bold;
     padding: 8px;
-}
-
-#sidebar::-webkit-scrollbar {
-    width: 10px;
-}
-
-#sidebar::-webkit-scrollbar-track {
-    background: rgba(0,0,0,0.3);
-}
-
-#sidebar::-webkit-scrollbar-thumb {
-    background: rgba(255,2555,255,0.3);
-    border-radius: 5px;
 }
 
 #content {
@@ -97,4 +105,3 @@ p a:hover {
 #content h2 a:hover:before {
     left: -14px;
 }
-
